source/real/priv_cloud/z-k8s_cilium_ingress/z-dev-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: z-dev-service
  namespace: default
spec:
  selector:
    app: z-dev
  ports:
    - name: z-dev-ssh
      protocol: TCP
      port: 22
      targetPort: 22
    - name: z-dev-http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: z-dev-https
      protocol: TCP
      port: 443
      targetPort: 443
