source/real/priv_cloud/z-k8s_cilium_ingress/z-dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: z-dev-ingress
  namespace: z-dev
spec:
  ingressClassName: cilium
  selector:
    app: z-dev
  ports:
  - name: ssh
    port: 22
    targetPort: 22
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
